--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,51 +1,3 @@
-.custom-header {
-    background-color: rgb(71, 51, 56);
-    padding: 0 20px; /* Increased padding for better spacing */
-    height: 100px; /* Keep a consistent height */
+.left-nav {
     display: flex;
-    align-items: center; /* Vertically center items */
-    justify-content: flex-start; /* Align both logo and menu icon to the left */
-}
-
-.custom-header .part1 {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    padding-right: 15px;
-}
-
-.custom-header .part2 {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start; /* Ensure menu icon is also aligned to the left */
-}
-
-.custom-header img {
-    display: block;
-    width: 70px;
-    height: auto;
-}
-
-.custom-header .wallet-text {
-    font-size: 30px;
-    font-weight: 200;
-    color: #9e8691;
-    margin-left: 10px;
-    white-space: nowrap; /* Prevents text wrapping */
-    text-decoration: none; /* Ensure no underline */
-}
-
-.custom-header a {
-    text-decoration: none; /* Remove underline for the entire Link */
-}
-
-.custom-header button.rounded-circle {
-    min-width: 40px;
-    height: 40px;
-    background: #9e869144;
-    color: #292929;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 10px; /* Space between logo/text and menu icon */
 }
