--- a/frontend/src/components/Form/Form.css
+++ b/frontend/src/components/Form/Form.css
@@ -1,3 +1,10 @@
+.form-div{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh; 
+}
+
 .form-container {
   display: flex;
   flex-direction: column;
@@ -7,30 +14,33 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  max-width: 400px;
+  min-height: 400px;
+  max-width: 600px;
+  min-width: 500px;
+  background-color: rgba(92, 192, 72, 0.118);
 }
-
+body {
+  font-family: "Playfair Display", sans-serif;
+  line-height: 1.6;
+  color: var(--text-color);
+  background-color: var(--background-color);
+}
 .form-input {
   width: 90%;
   padding: 10px;
-  margin: 10px 0;
+  margin: 10px 20px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
 }
 
-.form-button {
-  width: 95%;
-  padding: 10px;
-  margin: 20px 0;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.2s ease-in-out;
+
+.cta-button {
+  padding: 10px 30px;
+  margin: 20px 10px;
 }
 
-.form-button:hover {
-  background-color: #0056b3;
+.cta-button:hover {
+  background-color: #3a5a35;
+  transform: scale(1.05);
 }
