--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -1,8 +1,12 @@
 /* Container for the whole page */
-div {
-    font-family: Arial, sans-serif;
-  }
-  
+
+body {
+  font-family: "Playfair Display", sans-serif;
+  line-height: 1.6;
+  color: var(--text-color);
+  background-color: var(--background-color);
+  overflow-x:hidden;
+}  
   /* Styles for the notes section */
   .vault-section {
     margin-bottom: 2rem;
@@ -20,49 +24,67 @@ div {
     margin: 10px 0;
     padding: 10px 15px;
     border-radius: 5px;
+  }body {
+    font-family: "Playfair Display", sans-serif;
+    line-height: 1.6;
+    background-color: var(--background-color);
   }
   
-  /* Styles for the form section */
-  form {
-    background-color: #fff;
+  .form-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+  }
+  
+  .form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 50px auto;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    max-width: 500px;
-    margin: auto;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    min-height: 400px;
+    max-width: 600px;
+    min-width: 500px;
+    background-color: rgba(92, 192, 72, 0.118);
   }
   
-  form h2 {
-    color: #333;
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-  
-  form label {
-    font-weight: bold;
-    margin-top: 10px;
-  }
-  
-  form input,
-  form textarea {
-    width: 100%;
-    padding: 8px;
-    margin: 8px 0 16px;
+  .form-input {
+    width: 90%;
+    padding: 10px;
+    margin: 10px 20px;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
   }
   
-  form input[type="submit"] {
-    background-color: #007bff;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
+  .cta-button {
+    padding: 10px 30px;
+    margin: 20px 10px;
     cursor: pointer;
-    font-size: 16px;
   }
   
-  form input[type="submit"]:hover {
-    background-color: #0056b3;
+  .cta-button:hover {
+    background-color: #3a5a35;
+    transform: scale(1.05);
   }
+  
+  .main-layout {
+    display: flex;
+    flex-direction: row;
+    min-height: 100vh;
+  }
+  
+  .content-container {
+    flex-grow: 1;
+    padding: 1rem;
+  }
+  
+  form {
+    max-width: 600px;
+    margin: 0 auto;
+  }
+  
