--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -3,32 +3,11 @@
 body {
   font-family: "Playfair Display", sans-serif;
   line-height: 1.6;
-  color: var(--text-color);
   background-color: var(--background-color);
-  overflow-x:hidden;
-}  
-  /* Styles for the notes section */
-  .vault-section {
-    margin-bottom: 2rem;
-  }
+  overflow-x: hidden;
+  overflow-y: hidden; /* Allow vertical scrolling */
+}
   
-  .vault-section h2 {
-    color: #333;
-    font-size: 24px;
-  }
-  
-  /* Styles for individual notes - assuming your Note component has some container element */
-  .vault {
-    background-color: #f9f9f9;
-    border-left: 5px solid #007bff;
-    margin: 10px 0;
-    padding: 10px 15px;
-    border-radius: 5px;
-  }body {
-    font-family: "Playfair Display", sans-serif;
-    line-height: 1.6;
-    background-color: var(--background-color);
-  }
   
   .form-div {
     display: flex;
@@ -42,7 +21,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 50px auto;
+    margin-top: 0px;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -88,3 +67,7 @@ body {
     margin: 0 auto;
   }
   
+/* .main-content{
+  margin: 0px;
+  padding: 0px;
+} */
