--- a/frontend/src/pages/LandingPage/LandingPage.css
+++ b/frontend/src/pages/LandingPage/LandingPage.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #4b6f44;
+    --primary-color: rgb(75, 111, 68);
     --secondary-color: #e8f3e6;
     --text-color: #333333;
     --background-color: #ffffff;
