--- a/frontend/src/components/Challenge/Challenge.css
+++ b/frontend/src/components/Challenge/Challenge.css
@@ -7,8 +7,8 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    height: 30rem;
-    width: 35%;
+    height: 30%;
+    width: 25rem;
     margin: 1rem;
   }
   
