--- a/frontend/src/components/Sidebar/Sidebar.css
+++ b/frontend/src/components/Sidebar/Sidebar.css
@@ -1,7 +1,6 @@
 
   
   body {
-    font-family: "Playfair Display", sans-serif;
     line-height: 1.6;
     color: var(--text-color);
     background-color: var(--background-color);
@@ -32,9 +31,9 @@
   }
   
   .sidebar-container {
-    background-color: #728f5b31;
+    color: --primary-color;
     min-height: 100vh;
-    width: 250px;
+    width: 200px;
     z-index: 1;
     position: relative;
   }
