--- a/frontend/src/components/Vault/Vault.css
+++ b/frontend/src/components/Vault/Vault.css
@@ -1,12 +1,15 @@
+body {
+  font-family: var(--font-poppins);
+}
+
 .vault-container {
-  padding: 2rem;
+  padding: 1rem;
   border-radius: 10px;
   background-color: var(--secondary-color);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   width: 100%;
   height: fit-content;
 }
@@ -17,29 +20,25 @@
 }
 
 .vault-title {
-  font-size: 1.8rem;
+  font-size: 2rem;
   color: var(--primary-color);
-  font-weight: 700;
-  margin-bottom: 0.5rem;
-}
+  margin-bottom: 0.1rem;
+   }
 
 .vault-description {
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   color: var(--primary-color);
-  margin-bottom: 1rem;
 }
 
 .vault-amounts {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
 }
 
 .vault-target-amount,
 .vault-current-amount {
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: var(--primary-color);
-  font-weight: 600;
 }
 
 .vault-date {
