--- a/frontend/src/pages/LandingPage/LandingPage.css
+++ b/frontend/src/pages/LandingPage/LandingPage.css
@@ -1,7 +1,7 @@
 :root {
   --font-poppins: "Poppins", sans-serif;
-  --primary-color: rgb(31, 104, 18);
-  --secondary-color: rgb(31, 104, 18);
+  --primary-color: #ffd9009d;
+  --secondary-color: rgba(15, 58, 7, 0.476);
   --text-color: rgb(50, 94, 56);
 }
 
@@ -14,16 +14,26 @@
   font-size: 1.25rem;
 }
 .hero {
-  background: linear-gradient(
-    rgba(255, 255, 255, 1) 0%,
-    rgba(255, 255, 255, 1) 40%,
-    rgba(255, 255, 255, 0.85) 80%,
-    rgba(255, 255, 255, 0.82) 100%
-  );
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
+  height: 100vh;
+  background-color: var(--secondary-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 4rem 2rem;
+  position: relative;
+  overflow: hidden;
 }
+
+/* .bottom-fade {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 400px;
+  background: linear-gradient(to bottom, rgba(75, 111, 68, 0) 0%, rgba(0, 0, 0, 1) 100%);
+  z-index: 1;
+} */
 
 .hero-title {
   font-size: 3.5rem;
@@ -129,6 +139,7 @@ nav ul {
   display: flex;
   list-style-type: none;
   margin-bottom: 0;
+  color: #394b3c;
 }
 
 nav ul li {
@@ -165,8 +176,8 @@ h1 {
 }
 
 .cta-button {
-  background-color: var(--primary-color);
-  color: var(--background-color);
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
   padding: 1rem 1rem;
   font-size: 1.2rem;
   border: none;
