added monthly data vaults and sidebar adjustments

--- a/frontend/src/components/Personal/Personal.css
+++ b/frontend/src/components/Personal/Personal.css
@@ -12,7 +12,7 @@
   }
   
   .sidebar {
-    width: 250px;
+    /* width: 250px; */
     background-color: var(--artichoke-green);
     padding: 20px;
     color: white;
