--- a/frontend/src/components/LoadingIndicator/LoadingIndicator.css
+++ b/frontend/src/components/LoadingIndicator/LoadingIndicator.css
@@ -6,10 +6,10 @@
   
   .loader {
     border: 5px solid #f3f3f3; /* Light grey */
-    border-top: 5px solid #3498db; /* Blue */
+    border-top: 5px solid #246590; /* Blue */
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     animation: spin 2s linear infinite;
   }
   
