--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -53,7 +53,6 @@ body {
   .main-layout {
     display: flex;
     flex-direction: row;
-    min-height: 100vh;
   }
   
   .content-container {
@@ -66,7 +65,7 @@ body {
     margin: 0 auto;
   }
   
-/* .main-content{
+.main-content{
   margin: 0px;
   padding: 0px;
-} */
+} 
