--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,3 +1,23 @@
 .left-nav {
     display: flex;
 }
+
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px; /* Adjust based on your design */
+    background-color: rgb(0, 0, 0);
+    border-bottom: 0.01px solid #ffd9009d;
+    z-index: 1100; /* Higher than sidebar to stay on top */
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
+}
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
