--- a/frontend/src/components/Chat/Chat.css
+++ b/frontend/src/components/Chat/Chat.css
@@ -96,7 +96,7 @@
 .chat-messages {
   display: flex;
   flex-direction: column;
-  height: 450px; /* Adjust as needed */
+  height: 40px; /* Adjust as needed */
   overflow-y: auto;
   padding: 1.5rem;
   scroll-behavior: smooth;
@@ -111,8 +111,8 @@
       rgba(212, 175, 55, 0.03) 0%,
       transparent 50%
     );
-    max-height: calc(100vh - 170px);
-    min-height: calc(100vh - 170px);
+    max-height: calc(100vh - 280px);
+    min-height: calc(100vh - 280px);
 }
 
 .message-container {
@@ -180,6 +180,7 @@
   border-top-right-radius: 2px;
   border: none;
   box-shadow: 0 2px 8px rgba(166, 124, 0, 0.15);
+  padding: 15px;
 }
 
 .message-text {
